Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-8631

Memory leak in QMainWindow::restoreState

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.7.0
    • 4.6.1
    • Widgets: Main Window
    • None
    • Win32
    • a4af046157c7ef94990f9520c4611597ff271c57

    Description

      QMainWindow::restoreState causes memory leak if we have some QDockWidgets in main window.

      See QMainWindowLayoutState::checkFormat.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vfm Thierry Bastian (closed Nokia identity) (Inactive)
            vng Viktor Govako
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes