fixed a memory leak when restoring a state in QMainWindow

Task-number: QTBUG-8631